Changed django jobs url with cupon

--- a/djangomx/jobs/templates/jobs_home.html
+++ b/djangomx/jobs/templates/jobs_home.html
@@ -51,9 +51,9 @@
             <!-- Button trigger modal -->
         </div>
         <hr>
-        Te recomendamos también anunciar tu oferta en <a href="http://djangojobs.net">http://djangojobs.net</a> y te regalamos un cupón de descuento.
+        Te recomendamos también anunciar tu oferta en <a href="http://djangojobs.net/jobs/post/P/DJNGMX28/">http://djangojobs.net</a> y te regalamos un cupón de descuento.
         <hr>
-        <a href="http://djangojobs.net">
+        <a href="http://djangojobs.net/jobs/post/P/DJNGMX28/">
             <img src="{{ STATIC_URL }}img/djangojobs.png" class="img-responsive">
         </a>
     </div><!--/span-->
