Added open graph protocol

--- a/djangomx/templates/base.html
+++ b/djangomx/templates/base.html
@@ -12,6 +12,12 @@
     <meta name="description" content="Django Mexico es la comunidad de desarrolladores Django el framework que hace que sea más fácil de construir mejores aplicaciones web más rápido y con menos código">
     <meta name="robots" content="index, follow">
 
+    <meta property="og:url" content="https://django.mx/">
+    <meta property="og:site_name" content="Django MX">
+    <meta property="og:title" content="El WEB framework para perfeccionistas con fechas límite.">
+    <meta property="og:image" content="https://django.mx{{ STATIC_URL }}img/og_image.png" data-google-stars-image-width="1200" data-google-stars-image-height="630">
+    <meta property="og:description" content="Django Mexico es la comunidad de desarrolladores Django el framework que hace que sea más fácil de construir mejores aplicaciones web más rápido y con menos código">
+
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,100,300,700,400italic,700italic" rel="stylesheet" type="text/css">
     {% compress css %}
     <link href="{{ STATIC_URL }}css/animate.css" rel="stylesheet">
