fix email newslatter field

--- a/djangomx/templates/home.html
+++ b/djangomx/templates/home.html
@@ -68,7 +68,7 @@
                 <form id="newsletter-form" role="form" action="" method="post">
                     {% csrf_token %}
                     <div class="input-group">
-                        <input type="text" class="form-control input-lg" placeholder="Ingresa tu correo" name="email_field">
+                        <input type="text" class="form-control input-lg" placeholder="Ingresa tu correo" name="email">
                         <span class="input-group-btn">
                             <button id="subscribe-button" class="btn btn-lg btn-default" type="submit">Suscribete</button>
                         </span>
