--- a/djangomx/templates/base.html
+++ b/djangomx/templates/base.html
@@ -111,7 +111,7 @@
         </div>
     </section>
     <footer>
-        <small>© Copyright · dubnio.com · django.mx · 2015 · Todos los derechos reservados</small>
+        <small>© Copyright · dubnio.com · django.mx · 2015 · Todos los derechos reservados · <a href="https://github.com/dubnio/djangomx"><img src="{{ STATIC_URL }}img/social-github.png"></a></small>
     </footer>
     {% compress js %}
     <script src="{{ STATIC_URL }}js/djangomx.js" type="text/javascript"></script>
