--- a/djangomx/static/css/main.less
+++ b/djangomx/static/css/main.less
@@ -172,6 +172,12 @@ footer {
     color: #FFF;
     padding: 30px 0;
     text-align: center;
+    a  {
+       color: #FFF; 
+    }
+    a:hover {
+        color: #50AE84;
+    }
 }
 
 .label-error {
