--- a/djangomx/static/css/main.less
+++ b/djangomx/static/css/main.less
@@ -173,7 +173,7 @@ footer {
     padding: 30px 0;
     text-align: center;
     a  {
-       color: #FFF; 
+       color: #FFF;
     }
     a:hover {
         color: #50AE84;
@@ -235,4 +235,34 @@ footer {
     bottom:0;
     height: 100%;
     width:100%;
+}
+
+//
+.profile img.profile-image-lg{
+    z-index: 0;
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+.profile-image-profile
+{
+    margin: -90px 10px 0px 50px;
+    z-index: 9;
+    width: 20%;
+}
+
+@media (max-width:768px)
+{
+
+.profile-text>h1{
+    font-weight: 700;
+    font-size:16px;
+}
+
+.image-profile
+{
+    margin: -45px 10px 0px 25px;
+    z-index: 9;
+    width: 20%;
+}
 }
