--- a/djangomx/blog/templates/post.html
+++ b/djangomx/blog/templates/post.html
@@ -16,7 +16,8 @@
         <div class="blog-post">
             <h2 class="blog-post-title">{{ post.title }}</h2>
             <p class="blog-post-meta">
-                <span class="glyphicon glyphicon-calendar"></span>{{ post.created_at }} por <a href="#">{{ post.author }}</a>
+                <span class="glyphicon glyphicon-calendar"></span>{{ post.created_at }} por
+                <a href="{% url 'profile' username=post.author.username%}">{{ post.author.username }}</a>
             </p>
             <hr>
             {% if post.image %}
@@ -46,7 +47,7 @@
                 })();
             </script>
             <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-    
+
         </div><!-- /.blog-post -->
 
     </div><!-- End blog main -->
