Added profile social svg icons

--- a/djangomx/static/css/main.less
+++ b/djangomx/static/css/main.less
@@ -237,32 +237,38 @@ footer {
     width:100%;
 }
 
-//
-.profile img.profile-image-lg{
-    z-index: 0;
-    width: 100%;
-    margin-bottom: 10px;
+// Profile
+.profile img.profile-image-lg {
+  z-index: 0;
+  width: 100%;
+  margin-bottom: 10px;
 }
 
-.profile-image-profile
-{
-    margin: -90px 10px 0px 50px;
-    z-index: 9;
-    width: 20%;
+.profile-image-profile {
+  margin: -90px 10px 0px 50px;
+  z-index: 9;
+  width: 20%;
 }
 
-@media (max-width:768px)
-{
+@media (max-width:768px) {
+  .profile-text > h1 {
+      font-weight: 700;
+      font-size:16px;
+  }
 
-.profile-text>h1{
-    font-weight: 700;
-    font-size:16px;
+  .image-profile {
+      margin: -45px 10px 0px 25px;
+      z-index: 9;
+      width: 20%;
+  }
 }
 
-.image-profile
-{
-    margin: -45px 10px 0px 25px;
-    z-index: 9;
-    width: 20%;
-}
+.profile-socials {
+  margin: 0;
+  padding: 0;
+  li {
+    float: left;
+    display: block;
+    margin: 5px;
+  }
 }
