--- a/djangomx/blog/templates/post.html
+++ b/djangomx/blog/templates/post.html
@@ -1,7 +1,27 @@
 {% extends "base.html" %}
 {% load compress %}
 
-{% block title%}Django México - {{ post.title }}{% endblock %}
+{% block title%}{{ post.title }} — Django México{% endblock %}
+{% block title-content %}{{ post.title }}{% endblock %}
+{% block description-content %}{{ post.description }}{% endblock %}
+{% block og-url %}{{ post.full_url }}{% endblock %}
+{% block og-title %}{{ post.title }}{% endblock %}
+{% if post.image %}{% block og-image %}{{post.img_full_url}}{% endblock %}{% endif %}
+
+{% block og-description %}{{ post.description }}{% endblock %}
+{% if post.image %}{% block twitter-image %}{{post.img_full_url}}{% endblock %}{% endif %}
+
+{% block extra-meta %}
+<meta name="author" content="{{ post.author.username }}">
+<meta property="og:type" content="article">
+<meta property="article:publisher" content="https://django.mx/blog">
+<meta property="article:author" content="{{ post.author.first_name }} {{ post.author.last_name }}">
+<meta property="fb:smart_publish:robots" content="noauto">
+<meta property="article:published_time" content="{{ post.created_at.date }}">
+
+<link rel="canonical" href="{{post.img_full_url}}">
+{% endblock %}
+
 {% block activeblog %}class="active"{% endblock %}
 
 {% block content %}
