--- a/djangomx/blog/templates/post.html
+++ b/djangomx/blog/templates/post.html
@@ -17,7 +17,7 @@
 <meta property="article:publisher" content="https://django.mx/blog">
 <meta property="article:author" content="{{ post.author.first_name }} {{ post.author.last_name }}">
 <meta property="fb:smart_publish:robots" content="noauto">
-<meta property="article:published_time" content="{{ post.created_at.date }}">
+<meta property="article:published_time" content="{{ post.created_at|date:"c" }}">
 
 <link rel="canonical" href="{{post.img_full_url}}">
 {% endblock %}
