--- a/djangomx/blog/templates/post.html
+++ b/djangomx/blog/templates/post.html
@@ -15,11 +15,10 @@
 <meta name="author" content="{{ post.author.username }}">
 <meta property="og:type" content="article">
 <meta property="article:publisher" content="https://django.mx/blog">
-<meta property="article:author" content="{{ post.author.first_name }} {{ post.author.last_name }}">
-<meta property="fb:smart_publish:robots" content="noauto">
+<meta property="article:author" content="{{ post.author.first_name }}">
 <meta property="article:published_time" content="{{ post.created_at|date:"c" }}">
 
-<link rel="canonical" href="{{post.img_full_url}}">
+<link rel="canonical" href="{{post.full_url}}">
 {% endblock %}
 
 {% block activeblog %}class="active"{% endblock %}
