--- a/djangomx/templates/base.html
+++ b/djangomx/templates/base.html
@@ -32,6 +32,7 @@
     <link href="{{ STATIC_URL }}css/main.less" rel="stylesheet" type="text/less">
     {% endcompress %}
     <link href='https://api.tiles.mapbox.com/mapbox.js/v2.1.5/mapbox.css' rel='stylesheet' />
+    <script async defer id="github-bjs" src="https://buttons.github.io/buttons.js"></script>
 
     <!--
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ STATIC_URL }}ico/apple-touch-icon-144-precomposed.png">
@@ -119,6 +120,7 @@
     </section>
     <footer>
         <small>© Copyright · <a href="http://dubnio.com/">dubnio.com</a> · django.mx · 2015 · Todos los derechos reservados · <a href="https://github.com/dubnio/djangomx"><img src="{{ STATIC_URL }}img/social-github.png"></a></small>
+        <a class="github-button" href="https://github.com/dubnio/djangomx" aria-label="Star dubnio/djangomx on GitHub">Star</a>
     </footer>
     {% compress js %}
     <script src="{{ STATIC_URL }}js/djangomx.js" type="text/javascript"></script>
