Post list style

--- a/djangomx/static/css/main.less
+++ b/djangomx/static/css/main.less
@@ -218,7 +218,9 @@ footer {
 // Blog
 
 .blog-post {
-    margin-bottom: 80px;
+    margin: 2px;
+    padding: 10px;
+    border: 1px solid #EEEEEE;
 }
 
 .blog-post-title a{
