--- a/djangomx/blog/templates/blog_home.html
+++ b/djangomx/blog/templates/blog_home.html
@@ -22,10 +22,10 @@
       <div class="col-sm-6">
 
         <div class="blog-post">
-          <h2 class="blog-post-title"><a href="{% url 'view_post' post.slug %}">{{ post.title }}</a></h2>
+          <h2 class="blog-post-title"><a href="{% url 'blog:view_post' post.slug %}">{{ post.title }}</a></h2>
           <p class="blog-post-meta">
             <span class="glyphicon glyphicon-calendar"></span>{{ post.created_at }} por
-            <a href="{% url 'profile' username=post.author.username%}">{{ post.author.username }}</a>
+            <a href="{% url 'accounts:profile' username=post.author.username %}">{{ post.author.username }}</a>
           </p>
           <hr>
           {% if post.image %}
@@ -34,7 +34,7 @@
           {% endif %}
           {{ post.description | markdown}}
           <br>
-          <a class="btn btn-default btn-xs" href="{% url 'view_post' slug=post.slug %}">Continua leyendo »</a>
+          <a class="btn btn-default btn-xs" href="{% url 'blog:view_post' slug=post.slug %}">Continua leyendo »</a>
         </div><!-- End of post -->
       </div>
       {% empty %}<h2>Aún no hay post de entradas.</h2>
