--- a/djangomx/accounts/templates/accounts/profile.html
+++ b/djangomx/accounts/templates/accounts/profile.html
@@ -1,61 +1,60 @@
 {% extends "base.html" %}
 {% load compress thumbnail %}
+{% load django_markdown %}
 
-{% block title%}Django MX{% endblock %}
+{% block title%}{{ profile.user.get_full_name }} | Django MX{% endblock %}
 
 {% block content %}
 <div class="profile">
-  {% thumbnail user.profile.cover "850x280" crop="center" as im %}
-    <img align="left" class="profile-image-lg" src="{{ im.url }}" alt="{{ user.username }}">
+  {% thumbnail profile.cover "850x280" crop="center" as im %}
+    <img align="left" class="profile-image-lg" src="{{ im.url }}" alt="{{ profile.user.username }}">
   {% endthumbnail %}
 
-  {% thumbnail user.profile.avatar "180x180" crop="center" as im %}
-    <img align="left" class="profile-image-profile thumbnail" src="{{ im.url }}" alt="Profile image example"/>
-  {% endthumbnail %}
+  <img align="left" class="profile-image-profile thumbnail" src="{{ profile.avatar }}" alt="{{ profile.user.get_full_name }}"/>
 
   <div class="profile-text">
-    <h1>{{ user.first_name }} {{ user.last_name }}</h1>
-    <p>{{ user.profile.bio }}</p>
+    <h1>{{ profile.user.get_full_name }}</h1>
+    <p>{{ profile.bio }}</p>
     <ul class="profile-socials">
-      {% if user.profile.website %}
+      {% if profile.website %}
         <li>
-          <a href="{{ user.profile.website }}">
+          <a href="{{ profile.website }}">
             <svg id="chrome" class="custom-icon" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 100 100" style="height: 35px; width: 35px;"><rect class="outer-shape" x="0" y="0" width="100" height="100" rx="20" ry="20" style="opacity: 1; fill: rgb(50, 58, 68);"></rect>
             	<path class="inner-shape" style="opacity: 1; fill: rgb(255, 255, 255);" transform="translate(15.5,15.5) scale(0.69)" d="M25.717,43.736l-14.024-24.29C20.672,8.204,34.493,1,49.999,1c17.938,0,33.622,9.641,42.161,24.022H52.178 c-0.718-0.062-1.445-0.096-2.179-0.096C38.335,24.926,28.506,32.931,25.717,43.736L25.717,43.736z M67.543,32.103h28.085 c2.177,5.544,3.372,11.581,3.372,17.897c0,26.876-21.639,48.695-48.444,48.994l20.04-34.71c2.821-4.055,4.479-8.98,4.479-14.284 C75.076,42.997,72.188,36.657,67.543,32.103L67.543,32.103z M32.199,50c0-9.816,7.985-17.801,17.801-17.801S67.801,40.184,67.801,50 S59.816,67.801,50,67.801S32.199,59.816,32.199,50z M56.717,74.16L42.689,98.457c-23.594-3.53-41.689-23.88-41.689-48.457 c0-8.73,2.285-16.925,6.288-24.024l20.005,34.65c4.007,8.528,12.678,14.448,22.708,14.448C52.327,75.075,54.579,74.756,56.717,74.16 L56.717,74.16z"></path>
             </svg>
           </a>
         </li>
       {% endif %}
-      {% if user.profile.github %}
+      {% if profile.github %}
         <li>
-          <a href="{{ user.profile.github }}">
+          <a href="{{ profile.github }}">
             <svg id="github" class="custom-icon" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 100 100" style="height: 35px; width: 35px;"><rect class="outer-shape" x="0" y="0" width="100" height="100" rx="20" ry="20" style="opacity: 1; fill: rgb(50, 58, 68);"></rect>
             	<path class="inner-shape" style="opacity: 1; fill: rgb(255, 255, 255);" transform="translate(15.5,15.5) scale(0.69)" d="M50,1C22.938,1,1,22.938,1,50s21.938,49,49,49s49-21.938,49-49S77.062,1,50,1z M79.099,79.099 c-3.782,3.782-8.184,6.75-13.083,8.823c-1.245,0.526-2.509,0.989-3.79,1.387v-7.344c0-3.86-1.324-6.699-3.972-8.517 c1.659-0.16,3.182-0.383,4.57-0.67c1.388-0.287,2.855-0.702,4.402-1.245c1.547-0.543,2.935-1.189,4.163-1.938 c1.228-0.75,2.409-1.723,3.541-2.919s2.082-2.552,2.847-4.067s1.372-3.334,1.818-5.455c0.446-2.121,0.67-4.458,0.67-7.01 c0-4.945-1.611-9.155-4.833-12.633c1.467-3.828,1.308-7.991-0.478-12.489l-1.197-0.143c-0.829-0.096-2.321,0.255-4.474,1.053 c-2.153,0.798-4.57,2.105-7.249,3.924c-3.797-1.053-7.736-1.579-11.82-1.579c-4.115,0-8.039,0.526-11.772,1.579 c-1.69-1.149-3.294-2.097-4.809-2.847c-1.515-0.75-2.727-1.26-3.637-1.532c-0.909-0.271-1.754-0.439-2.536-0.503 c-0.782-0.064-1.284-0.079-1.507-0.048c-0.223,0.031-0.383,0.064-0.478,0.096c-1.787,4.53-1.946,8.694-0.478,12.489 c-3.222,3.477-4.833,7.688-4.833,12.633c0,2.552,0.223,4.889,0.67,7.01c0.447,2.121,1.053,3.94,1.818,5.455 c0.765,1.515,1.715,2.871,2.847,4.067s2.313,2.169,3.541,2.919c1.228,0.751,2.616,1.396,4.163,1.938 c1.547,0.543,3.014,0.957,4.402,1.245c1.388,0.287,2.911,0.511,4.57,0.67c-2.616,1.787-3.924,4.626-3.924,8.517v7.487 c-1.445-0.43-2.869-0.938-4.268-1.53c-4.899-2.073-9.301-5.041-13.083-8.823c-3.782-3.782-6.75-8.184-8.823-13.083 C9.934,60.948,8.847,55.56,8.847,50s1.087-10.948,3.231-16.016c2.073-4.899,5.041-9.301,8.823-13.083s8.184-6.75,13.083-8.823 C39.052,9.934,44.44,8.847,50,8.847s10.948,1.087,16.016,3.231c4.9,2.073,9.301,5.041,13.083,8.823 c3.782,3.782,6.75,8.184,8.823,13.083c2.143,5.069,3.23,10.457,3.23,16.016s-1.087,10.948-3.231,16.016 C85.848,70.915,82.88,75.317,79.099,79.099L79.099,79.099z"></path>
             </svg>
           </a>
         </li>
       {% endif %}
-      {% if user.profile.twitter %}
+      {% if profile.twitter %}
         <li>
-          <a href="{{ user.profile.twitter }}">
+          <a href="{{ profile.twitter }}">
             <svg id="twitter" class="custom-icon" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 100 100" style="height: 35px; width: 35px;"><rect class="outer-shape" x="0" y="0" width="100" height="100" rx="20" ry="20" style="opacity: 1; fill: rgb(50, 58, 68);"></rect>
               <path class="inner-shape" style="opacity: 1; fill: rgb(255, 255, 255);" transform="translate(15.5,15.5) scale(0.69)" d="M99.001,19.428c-3.606,1.608-7.48,2.695-11.547,3.184c4.15-2.503,7.338-6.466,8.841-11.189 c-3.885,2.318-8.187,4-12.768,4.908c-3.667-3.931-8.893-6.387-14.676-6.387c-11.104,0-20.107,9.054-20.107,20.223 c0,1.585,0.177,3.128,0.52,4.609c-16.71-0.845-31.525-8.895-41.442-21.131C6.092,16.633,5.1,20.107,5.1,23.813 c0,7.017,3.55,13.208,8.945,16.834c-3.296-0.104-6.397-1.014-9.106-2.529c-0.002,0.085-0.002,0.17-0.002,0.255 c0,9.799,6.931,17.972,16.129,19.831c-1.688,0.463-3.463,0.71-5.297,0.71c-1.296,0-2.555-0.127-3.783-0.363 c2.559,8.034,9.984,13.882,18.782,14.045c-6.881,5.424-15.551,8.657-24.971,8.657c-1.623,0-3.223-0.096-4.796-0.282 c8.898,5.738,19.467,9.087,30.82,9.087c36.982,0,57.206-30.817,57.206-57.543c0-0.877-0.02-1.748-0.059-2.617 C92.896,27.045,96.305,23.482,99.001,19.428z"></path>
             </svg>
           </a>
         </li>
       {% endif %}
-      {% if user.profile.facebook %}
+      {% if profile.facebook %}
         <li>
-          <a href="{{ user.profile.facebook }}">
+          <a href="{{ profile.facebook }}">
             <svg id="facebook-square" class="custom-icon" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 100 100" style="height: 35px; width: 35px;"><rect class="outer-shape" x="0" y="0" width="100" height="100" rx="20" ry="20" style="opacity: 1; fill: rgb(50, 58, 68);"></rect>
 	             <path class="inner-shape" style="opacity: 1; fill: rgb(255, 255, 255);" transform="translate(15.5,15.5) scale(0.69)" d="M82.667,1H17.335C8.351,1,1,8.351,1,17.336v65.329c0,8.99,7.351,16.335,16.334,16.335h65.332 C91.652,99.001,99,91.655,99,82.665V17.337C99,8.353,91.652,1.001,82.667,1L82.667,1z M84.318,50H68.375v42.875H50V50h-8.855V35.973 H50v-9.11c0-12.378,5.339-19.739,19.894-19.739h16.772V22.3H72.967c-4.066-0.007-4.57,2.12-4.57,6.078l-0.023,7.594H86.75 l-2.431,14.027V50z"></path>
              </svg>
           </a>
         </li>
       {% endif %}
-      {% if user.linkedin.twitter %}
+      {% if profile.linkedin %}
         <li>
-          <a href="{{ user.profile.twitter }}">
+          <a href="{{ profile.linkedin }}">
             <svg id="linkedin" class="custom-icon" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 100 100" style="height: 35px; width: 35px;"><rect class="outer-shape" x="0" y="0" width="100" height="100" rx="20" ry="20" style="opacity: 1; fill: rgb(50, 58, 68);"></rect>
             	<path class="inner-shape" style="opacity: 1; fill: rgb(255, 255, 255);" transform="translate(15.5,15.5) scale(0.69)" d="M82.539,1H17.461C8.408,1,1,8.408,1,17.461v65.078C1,91.592,8.408,99,17.461,99h65.078C91.592,99,99,91.592,99,82.539 V17.461C99,8.408,91.592,1,82.539,1z M37.75,80.625H25.5V37.75h12.25V80.625z M31.625,31.625c-3.383,0-6.125-2.742-6.125-6.125 s2.742-6.125,6.125-6.125s6.125,2.742,6.125,6.125S35.008,31.625,31.625,31.625z M80.625,80.625h-12.25v-24.5 c0-3.383-2.742-6.125-6.125-6.125s-6.125,2.742-6.125,6.125v24.5h-12.25V37.75h12.25v7.606c2.526-3.47,6.389-7.606,10.719-7.606 c7.612,0,13.782,6.856,13.782,15.312L80.625,80.625L80.625,80.625z"></path>
             </svg>
@@ -64,6 +63,31 @@
       {% endif %}
     </ul>
   </div>
+</div>
+
+<div class="row">
+
+  {% for post in posts %}
+  <div class="col-sm-6">
+    <div class="blog-post">
+      <h2 class="blog-post-title"><a href="{% url 'blog:view_post' post.slug %}">{{ post.title }}</a></h2>
+      <p class="blog-post-meta">
+        <span class="glyphicon glyphicon-calendar"></span>{{ post.created_at }} por <a href="{% url 'accounts:profile' post.author.username %}">{{ post.author.username }}</a>
+      </p>
+      <hr>
+      {% if post.image %}
+      <img src="{{ post.image.url }}" class="img-responsive img-rounded">
+      <hr>
+      {% endif %}
+      {{ post.description | markdown }}
+      <br>
+      <a href="{%url 'blog:view_post' post.slug %}" class="btn btn-default btn-xs">Continúa leyendo »</a>
+    </div><!-- end .blog-post -->
+  </div><!-- end .col-sm-6 -->
+  {% empty %}
+  <p class="lead text-muted">Este usuario no tiene posts aún.</p>
+  {% endfor %}
+
 </div>
 
 {% endblock %}
