--- a/djangomx/blog/templates/post.html
+++ b/djangomx/blog/templates/post.html
@@ -7,19 +7,19 @@
 {% block description-content %}{{ post.description }}{% endblock %}
 {% block og-url %}{{ post.full_url }}{% endblock %}
 {% block og-title %}{{ post.title }}{% endblock %}
-{% if post.image %}{% block og-image %}{{post.img_full_url}}{% endblock %}{% endif %}
+{% if post.image %}{% block og-image %}{{ post.img_full_url }}{% endblock %}{% endif %}
 
 {% block og-description %}{{ post.description }}{% endblock %}
-{% if post.image %}{% block twitter-image %}{{post.img_full_url}}{% endblock %}{% endif %}
+{% if post.image %}{% block twitter-image %}{{ post.img_full_url }}{% endblock %}{% endif %}
 
 {% block extra-meta %}
-<meta name="author" content="{{ post.author.username }}">
+<meta name="author" content="{{ post.author }}">
 <meta property="og:type" content="article">
 <meta property="article:publisher" content="https://django.mx/blog">
 <meta property="article:author" content="{{ post.author.first_name }}">
 <meta property="article:published_time" content="{{ post.created_at|date:"c" }}">
 
-<link rel="canonical" href="{{post.full_url}}">
+<link rel="canonical" href="{{ post.full_url }}">
 {% endblock %}
 
 {% block activeblog %}class="active"{% endblock %}
@@ -33,23 +33,25 @@
 <div class="row">
 
     <div class="col-sm-8 blog-main">
+
         <div class="blog-post">
-            <h2 class="blog-post-title">{{ post.title }}</h2>
+
+            <h2 class="blog-post-title">{{ post.title }}{{ object.title }}</h2>
             <p class="blog-post-meta">
-                <span class="glyphicon glyphicon-calendar"></span>{{ post.created_at }} por
-                <a href="{% url 'accounts:profile' username=post.author.username%}">{{ post.author.username }}</a>
+                <span class="glyphicon glyphicon-calendar"></span> {{ post.created_at }} por
+                <a href="{% url 'accounts:profile' post.author %}">{{ post.author }}</a> en <a href="{% url 'blog:category' post.category.slug %}">{{ post.category }}</a>
             </p>
             <hr>
             {% if post.image %}
             <img src="{{ post.image.url }}" class="img-responsive img-rounded">
             <hr>
             {% endif %}
-            {{ post.content | markdown}}
+            {{ post.content|markdown }}
             <hr>
 
-            <a href="https://twitter.com/share" class="twitter-share-button" data-url="https://django.mx{% url 'blog:view_post' post.slug %}" data-via="django_mx" data-hashtags="django">Tweet</a>
+            <a href="https://twitter.com/share" class="twitter-share-button" data-url="{{ post.get_absolute_url }}" data-via="django_mx" data-hashtags="django">Tweet</a>
 
-            <div class="fb-share-button" data-href="https://django.mx{% url 'blog:view_post' post.slug %}" data-layout="button_count"></div>
+            <div class="fb-share-button" data-href="{{ post.get_absolute_url }}" data-layout="button_count"></div>
 
             <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 
