pequeñeses de textos y una cosa de estilo para el blog

--- a/djangomx/jobs/templates/jobs_home.html
+++ b/djangomx/jobs/templates/jobs_home.html
@@ -9,7 +9,7 @@
 <div class="row">
     <div class="jumbotron">
         <h2 class="welcome-h2">¡Encuentra algún desarrollador Django!</h2>
-        <p class="welcome-p">Postea tu oferta de trabajo rápido y ponte en contacto con un desarrollador django en México.</p>
+        <p class="welcome-p">Postea tu oferta de trabajo rápido y ponte en contacto con un desarrollador Django en México.</p>
     </div> 
 </div>
 
