--- a/djangomx/templates/home.html
+++ b/djangomx/templates/home.html
@@ -7,7 +7,7 @@
 {% block content %}
 <div class="jumbotron">
     <h2 class="welcome-h2">El WEB framework para perfeccionistas con fechas límite.</h2>
-    <p class="welcome-p" class="lead">Django hace que sea más fácil de construir mejores aplicaciones web más rápido y con menos código</p>
+    <p class="welcome-p" class="lead">Django hace más fácil construir mejores aplicaciones web, rápido y con menos código</p>
 </div>
 
 <div class="row feature-row">
@@ -15,14 +15,14 @@
         <div class="feature-box">
             <img class="img-rounded" data-src="holder.js/140x140" alt="140x140" style="width: 140px; height: 140px;" src="{{ STATIC_URL }}img/orm.png">
             <h3>Mapeo objeto relación</h3>
-            <p>Defina sus modelos de datos en su totalidad en Python. Usted recibe una rica API dinámica base de datos de acceso de forma gratuita - pero todavía se puede escribir SQL si es necesario.</p>
+            <p>Define tus modelos de datos en su totalidad con Python. Podrás usar Python para crear, leer, actualizar y borrar infromación en la base de datos, aún podrás escribir SQL si es necesario.</p>
         </div>
     </div><!-- /.col-lg-4 -->
     <div class="col-lg-4">
         <div class="feature-box">
             <img class="img-rounded" data-src="holder.js/140x140" alt="140x140" style="width: 140px; height: 140px;" src="{{ STATIC_URL }}img/admin.png">
             <h3>Interfaz de administración</h3>
-            <p>Ahórrese el trabajo tedioso de crear interfaces para añadir y actualizar contenido. Django lo hace automáticamente, y esta listo para producción.</p>
+            <p>Ahórra el trabajo tedioso de crear interfaces para añadir y actualizar contenido. Django lo hace automáticamente, y esta listo para producción.</p>
         </div>
     </div><!-- /.col-lg-4 -->
     <div class="col-lg-4">
@@ -63,7 +63,7 @@
             <div class="col-md-12">
                 <div class="overview">
                     <h1>Mantente informado</h1>
-                    <p class="lead">¡Únete al grupo de desarrolladores django en México!</p>
+                    <p class="lead">¡Únete al grupo de desarrolladores Django en México!</p>
                 </div>
                 <form id="newsletter-form" role="form" action="" method="post">
                     {% csrf_token %}
