--- a/djangomx/blog/templates/blog_home.html
+++ b/djangomx/blog/templates/blog_home.html
@@ -71,7 +71,7 @@
   <div class="col-sm-3 col-sm-offset-1 blog-sidebar">
 
     <div class="sidebar-module sidebar-module-inset">
-      <p>En este blog trataremos de escribir tips y otras cosas útiles de django o python.</p>
+      <p>En este blog trataremos de escribir tips y otras cosas útiles de Django o Python.</p>
     </div>
 
     <div class="sidebar-module">
